<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" />

        <!-- 中心处为logo-->
        <ImageView
            android:layout_margin="@dimen/large_padding_size"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_about_version" />

        <include layout="@layout/divider" />

        <TextView
            style="@style/profile_text_style"
            android:text="@string/text_myprofile_about_caption" />

        <TextView
            style="@style/profile_text_style"
            android:text="@string/text_myprofile_developers" />

        <include layout="@layout/divider" />

        <TextView
            style="@style/profile_text_style"
            android:text="@string/text_contact_caption" />

        <TextView
            style="@style/profile_text_style"
            android:id="@+id/text_myprofile_contact_us"
            android:text="@string/text_contact_list" />

        <include layout="@layout/divider" />

        <TextView
            style="@style/profile_text_style"
            android:text="@string/text_myprofile_about_author" />

        <TextView
            style="@style/profile_text_style"
            android:text="@string/text_myprofile_author" />

        <include layout="@layout/divider" />

    </LinearLayout>
</ScrollView>