<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <SearchView
        android:layout_width="match_parent"
        android:background="@color/app_background"
        android:layout_height="@dimen/list_item_height"
        android:iconifiedByDefault="false"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:queryHint="@string/hint_search_flag"
        android:id="@+id/search_flag"/>


    <LinearLayout style="@style/list_container">

        <!-- 鸟种名称-->
        <LinearLayout style="@style/list_element">

            <TextView style="@style/caption"
                android:text="@string/caption_bird_name"/>

            <TextView style="@style/content"
                      android:layout_marginRight="@dimen/common_padding_size"
                android:id="@+id/text_flag_bird_name"/>

        </LinearLayout>

        <!-- 旗标颜色-->
        <include layout="@layout/divider_horizon_padding"/>
        <LinearLayout style="@style/list_function_element"
            android:id="@+id/layout_flag_flag_color">

            <TextView style="@style/caption"
                android:text="@string/caption_flag_color"/>

            <TextView style="@style/content"
                android:id="@+id/text_flag_flag_color"
                android:text=""/>

            <include layout="@layout/right_arrow"/>

        </LinearLayout>

        <!-- 左-->
        <include layout="@layout/divider_horizon_padding"/>
        <LinearLayout style="@style/list_function_element"
            android:id="@+id/layout_flag_left_hoop">

            <TextView style="@style/caption"
                android:text="@string/caption_left_hoop"/>

            <TextView style="@style/content"
                android:id="@+id/text_flag_left_hoop"/>

            <include layout="@layout/right_arrow"/>
        </LinearLayout>

        <!-- 右-->
        <include layout="@layout/divider_horizon_padding"/>
        <LinearLayout style="@style/list_function_element"
            android:id="@+id/layout_flag_right_hoop">

            <TextView style="@style/caption"
                android:text="右胫彩环"/>

            <TextView style="@style/content"
                android:id="@+id/text_flag_right_hoop"/>

            <include layout="@layout/right_arrow"/>

        </LinearLayout>

        <!-- 旗标编码-->
        <include layout="@layout/divider_horizon_padding"/>
        <LinearLayout style="@style/list_element">

            <TextView style="@style/caption"
                android:id="@+id/text_flag_flag_code"
                android:text="@string/caption_flag_code"/>

            <EditText style="@style/list_edit"
                android:id="@+id/edit_flag_flag_code"
                android:hint="@string/hint_flag_flag_code"/>
        </LinearLayout>

        <!-- 发现时间-->
        <include layout="@layout/divider_horizon_padding"/>
        <LinearLayout style="@style/list_function_element"
            android:id="@+id/layout_flag_discover_time">

            <TextView style="@style/caption"
                android:text="@string/caption_discover_time"/>

            <TextView style="@style/content"
                android:id="@+id/text_flag_discover_time"/>

            <include layout="@layout/right_arrow"/>
        </LinearLayout>

        <!-- 旗标备注-->
        <include layout="@layout/divider_horizon_padding"/>
        <LinearLayout style="@style/list_element">

            <TextView style="@style/caption"
                android:id="@+id/text_flag_remarks"
                android:text="@string/caption_flag_remarks"/>

            <EditText style="@style/list_edit"
                android:id="@+id/edit_flag_remarks"
                android:hint="@string/hint_add_detail"/>

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/divider_horizon_padding"/>

    <LinearLayout style="@style/list_container">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/button_flag_upload"
            android:text="@string/caption_home_local_upload"/>
    </LinearLayout>

    <include layout="@layout/divider"/>

</LinearLayout>