<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 搜索框-->
        <SearchView
        android:id="@+id/search_view_add"
        android:layout_width="match_parent"
        android:layout_height="@dimen/element_height"
        android:iconifiedByDefault="false"
        android:imeOptions="actionSearch"
        android:queryHint="@string/hint_add_search"
        android:inputType="text"/>

        <!-- 经纬度定位区域-->
        <include layout="@layout/layout_divider" />
        <RelativeLayout style="@style/list_common_layout">

            <Button style="@style/list_right_button"
                android:id="@+id/button_add_locate"
                android:text="@string/button_add_locate"/>

            <TextView style="@style/list_text_caption"
                android:id="@+id/text_add_locate_caption"
                android:text="@string/text_add_locate_caption" />

            <EditText style="@style/list_edit"
                android:id="@+id/edit_add_locate"
                android:hint="@string/hint_add_locate"
                android:layout_toRightOf="@id/text_add_locate_caption"
                android:layout_toLeftOf="@id/button_add_locate" />

        </RelativeLayout>


        <!-- 日期区域-->
        <RelativeLayout style="@style/list_common_layout"
            android:id="@+id/layout_add_date">
            <include layout="@layout/layout_divider" />

            <TextView style="@style/list_text_caption"
                android:text="@string/text_add_date_caption"/>

            <TextView style="@style/list_text_content"
                android:id="@+id/text_add_date"/>

            <!-- 右箭头-->
            <include layout="@layout/layout_right_arrow" />

        </RelativeLayout>


        <!-- 天气区域-->
        <RelativeLayout style="@style/list_common_layout">
            <include layout="@layout/layout_divider" />

            <Button style="@style/list_right_button"
                android:id="@+id/button_add_today_weather"
                android:text="@string/button_add_today_weather_caption"/>

            <TextView style="@style/list_text_caption"
                android:id="@+id/text_add_weather_caption"
                android:text="@string/text_add_weather_caption" />

            <EditText style="@style/list_edit"
                android:id="@+id/edit_add_weather"
                android:layout_toRightOf="@id/text_add_weather_caption"
                android:layout_toLeftOf="@id/button_add_today_weather"/>

        </RelativeLayout>


        <!--鸟物种名称TextView-->
        <RelativeLayout
            style="@style/list_common_layout"
            android:id="@+id/layout_add_birds">


            <include layout="@layout/layout_divider" />

            <TextView
                    android:id="@+id/text_add_birds_caption"
                style="@style/list_text_caption"
                android:text="@string/text_add_expand_caption" />

            <TextView
                style="@style/list_text_content"
                android:layout_marginLeft="@dimen/small_padding_size"
                android:layout_toRightOf="@id/text_add_birds_caption"
                android:id="@+id/text_add_birds" />

            <!-- 右箭头-->
            <include layout="@layout/layout_right_arrow" />

        </RelativeLayout>



        <!-- 备注区域-->
        <RelativeLayout style="@style/list_common_layout">

            <include layout="@layout/layout_divider" />

            <TextView style="@style/list_text_caption"
                android:id="@+id/text_add_detail_caption"
                android:text="@string/text_add_detail_caption"/>

            <EditText style="@style/list_edit"
                android:id="@+id/edit_add_detail"
                android:hint="@string/hint_add_detail"
                android:layout_toRightOf="@id/text_add_detail_caption"/>

        </RelativeLayout>

        <!-- 添加记录按钮-->
        <RelativeLayout style="@style/list_common_layout">
            <include layout="@layout/layout_divider" />

            <Button style="@style/list_button"
                android:id="@+id/button_add_addrecord"
                android:layout_centerInParent="true"
                android:text="@string/button_add_addrecord_caption"/>
        </RelativeLayout>


        <!--添加记录列表-->
        <include layout="@layout/layout_divider"
            android:layout_height="2px"
            android:layout_width="match_parent" />
        <ListView
            android:id="@+id/list_add_confirm"
            android:background="@color/list_bg_color"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_list_confirm_height"/>


        <!--保存按钮-->
        <include layout="@layout/layout_divider"
            android:layout_height="2px"
            android:layout_width="match_parent"/>
        <RelativeLayout style="@style/list_common_layout"
            android:gravity="center">

            <Button style="@style/list_button"
                android:id="@+id/button_add_local"
                android:text="@string/button_add_local"/>

            <Button style="@style/list_button"
                android:id="@+id/button_add_upload"
                android:text="@string/button_add_upload"
                android:layout_toRightOf="@id/button_add_local"/>

        </RelativeLayout>

        <include layout="@layout/layout_divider" />

    </LinearLayout>
</ScrollView>