<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <ListView
        android:background="@color/content_color"
        android:id="@+id/list_home_local"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_tab_height"
        android:background="@color/app_background">

        <Button
            android:id="@+id/button_home_local_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/caption_delete"/>

        <Button
            android:id="@+id/button_home_local_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_padding_size"
            android:layout_toRightOf="@id/button_home_local_delete"
            android:text="@string/caption_home_local_upload" />

        <Button
            android:id="@+id/button_home_local_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/common_padding_size"
            android:layout_toLeftOf="@id/button_home_local_delete"
            android:text="@string/caption_home_local_select_all"/>

    </RelativeLayout>

</LinearLayout>