<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/partial_toolbar_with_back" />

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/draft_list"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <include layout="@layout/divider"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/background">

        <CheckBox
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/caption_home_local_select_all"/>

        <Button
            android:id="@+id/all_upload"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:text="@string/caption_home_local_upload" />

        <Button
            android:id="@+id/all_delete"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:text="@string/caption_delete"/>
    </LinearLayout>

</LinearLayout>
