<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />


    <include layout="@layout/divider_horizon_padding"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/common_padding_size"/>

    <LinearLayout style="@style/list_container">

        <LinearLayout style="@style/list_function_element" android:id="@+id/layout_date_statistics_start_time">

            <TextView style="@style/caption" android:text="@string/caption_date_statistics_start_time"/>

            <TextView style="@style/content" android:id="@+id/text_date_statistics_start_time"/>

            <include layout="@layout/right_arrow"/>

        </LinearLayout>

        <include layout="@layout/divider_horizon_padding"/>

        <LinearLayout style="@style/list_function_element"
            android:id="@+id/layout_date_statistics_end_time">


            <TextView
                style="@style/caption"
                android:text="@string/caption_date_statistics_end_time"/>

            <TextView style="@style/content"
                android:id="@+id/text_date_statistics_end_time"/>

            <include layout="@layout/right_arrow"/>

        </LinearLayout>

    </LinearLayout>


    <include layout="@layout/divider"/>

    <LinearLayout
        android:id="@+id/layout_date_statistics_chart"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <include layout="@layout/divider"/>

    <LinearLayout
        android:background="@color/content_color"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_date_statistics_get_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="获取当前期间图表"/>

        <Button
            android:id="@+id/button_date_statistics_save_as_excel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caption_save_as_excel"/>

    </LinearLayout>

</LinearLayout>